--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -894,27 +894,33 @@
 
 .dashboard-container {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.dashboard-card {
+  display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #ffffff;
+  border-radius: 10px;
+  width: 80%;
+  padding: 20px;
 }
 
 .dashboard-summary {
   display: flex;
   justify-content: center;
-  background-color: #ffffff;
-  border-radius: 10px;
-  width: 80%;
-  height: 140px;
-  margin-top: 20px;
+  width: 100%;
 }
 
 .dashboard-timeline-container {
   display: flex;
   justify-content: center;
-  background-color: #ffffff;
-  border-radius: 10px;
-  width: 80%;
-  margin-top: 20px;
+  width: 100%;
+  padding-top: 30px;
+  margin-bottom: 10px;
 }
 
 .dashboard-item {
