--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -913,6 +913,16 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  margin: 10px 0;
+}
+
+.dashboard-subheading {
+  display: flex;
+  align-items: baseline;
+  width: 100%;
+  margin-left: 40px;
+  margin-bottom: -20px;
+  margin-top: -10px;
 }
 
 .dashboard-timeline-container {
