--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -401,12 +401,11 @@
 .profile-image-container {
   height: 90%;
   padding: 20px;
-  margin-top: 20px;
+  max-width: 250px;
 }
 
 .profile-image {
-  height:220px;
-  width: 180px;
+  width: 80%;
   object-fit: cover; 
   border-radius: 10px;
 }
